--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "client": "cd client && npm start",
+    "client": "cd ../client && npm start",
     "server": "nodemon app.js --ignore client",
     "devStart": "concurrently \"npm run client\" \"npm run server\"",
     "test": "echo \"Error: no test specified\" && exit 1"
