--- a/api/package.json
+++ b/api/package.json
@@ -17,8 +17,9 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "^4.21.1",
     "node-ipinfo": "^3.5.1",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "server": "file:"
   }
 }
